--- a/mj_OnePlus1.html
+++ b/mj_OnePlus1.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <script>
+  window.targetGlobalSettings = {  
+   cookieDomain: 'mayan1394.github.io'
+};
+    </script>
+      
+  
   <script src="https://assets.adobedtm.com/35066b6d6803/f58de76c5808/launch-c2946ea8bf79-development.min.js" async></script>
   </head>
 <body>
