--- a/mj_OnePlus1.html
+++ b/mj_OnePlus1.html
@@ -11,7 +11,7 @@
   <script src="https://assets.adobedtm.com/35066b6d6803/f58de76c5808/launch-c2946ea8bf79-development.min.js" async></script>
   </head>
 <body>
-<h1>Prod 7: One Plus Nord CE2 Lite</h1>
+<h1>Prod 1 : Qashqai 1</h1>
 
  <h2></h2>
 
