--- a/mj_29594_326G_TDZAREYJ12TEBB-3E-.html
+++ b/mj_29594_326G_TDZAREYJ12TEBB-3E-.html
@@ -16,6 +16,8 @@
 <p>name: QASHQAIJ12A</p>
 <p>driveTrain: 2WD</p>
 <p>fuelType: Petrol</p>
+<p>fuelColor : 326G </p>
+<p>Grade: N-Connecta </p>
 
   
 
