--- a/mj_29594_326G_TDZAREYJ12TEBB-3E-.html
+++ b/mj_29594_326G_TDZAREYJ12TEBB-3E-.html
@@ -15,10 +15,10 @@
 
 <p>name: QASHQAIJ12A</p>
 
-<p>fuelType: Petrol</p>
-<p>Grade: N-Connecta </p>
-<p>Transmission : Manual </p>
-<p>driveTrain: 2WD</p>
+<p>fuelType: Petrol | Weight = 20</p>
+<p>Grade: N-Connecta | Weight = 15</p>
+<p>Transmission : Manual | Weight = 11</p>
+<p>driveTrain: 2WD | Weight = 8</p>
 
 
 
