--- a/mj_29594_NBVB_TDZARJYJ12UEBTJW--.html
+++ b/mj_29594_NBVB_TDZARJYJ12UEBTJW--.html
@@ -13,5 +13,12 @@
 
  <h2></h2>
 
+<p>name: QASHQAIJ12A</p>
+
+<p>fuelType: Petrol | Weight = 20</p>
+<p>Grade: Tekna | Weight = 15</p>
+<p>Transmission : Manual | Weight = 11</p>
+<p>driveTrain: 2WD | Weight = 8</p>
+  
 </body>
 </html>
