--- a/mj_29594_Z10G_TDNARE9J12HEBB-3--.html
+++ b/mj_29594_Z10G_TDNARE9J12HEBB-3--.html
@@ -11,6 +11,14 @@
 <body>
 <h1>Entity ID - 29594_Z10G_TDNARE9J12HEBB-3--</h1>
 
+<p>name: QASHQAIJ12A</p>
+
+<p>fuelType: Petrol/Electric | Weight = 20</p>
+<p>Grade: Tekna | Weight = 15</p>
+<p>Transmission : Automatic | Weight = 11</p>
+<p>driveTrain: 4WD | Weight = 8</p>
+
+  
  <h2></h2>
 
 </body>
