--- a/eComRec_Car2.html
+++ b/eComRec_Car2.html
@@ -10,8 +10,10 @@
   </head>
 <body>
 <h1>EComm_Car2</h1>
-
- <h2>Hello World</h2>
+<p> Now viewing - nissan_en_ae-du2024FDTALVZP15EKAB-BGBQACG </p>
+  <p> eim is FDTALVZP15EKAB-BGB </p>
+  <p> color code - QACG (Aspen White) </p>
+ 
 
 </body>
 </html>
