--- a/eComRec_Car2.html
+++ b/eComRec_Car2.html
@@ -13,6 +13,7 @@
 <p> Now viewing - nissan_en_ae-du2024FDTALVZP15EKAB-BGBQACG </p>
   <p> eim is FDTALVZP15EKAB-BGB </p>
   <p> color code - QACG (Aspen White) </p>
+  <p>Insert Recs here</p>
  
 
 </body>
