--- a/eComRec_Car3.html
+++ b/eComRec_Car3.html
@@ -10,7 +10,8 @@
   </head>
 <body>
 <h1>EComm_Car2</h1>
-<p> Now viewing - nissan_en_ae-du2024FDTALVZP15EKAB-BGBQACG </p>
+<p> Now viewing - Nissan Kicks Aspen White </p>
+  <p> Price - 89500 </p>
   <p> eim is FDTALVZP15EKAB-BGB </p>
   <p> color code - QACG (Aspen White) </p>
   <p>Recommendations placeholder</p>
